--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Text Formatting</title>
 </head>
 <body>
-  <h1>subtitle</h1>
+  <h1>Subtitle</h1>
 <p>Hello World</p>
 
 <p>Hello Moon</p>
